# AwesomeTreesome

./: CMakeLists.txt  LICENSE.txt  Queue_front.c  README.md  Stack_front.c  data.h  hash_back.c  hash_front.c  linkedList_back.c  linkedList_front.c  main.c  tree_back.c  tree_front.c
